Handle SIGINT/SIGTERM to prevent accidental data loss

(linux only)

BUG: 445016